Nav Bar Changed

--- a/style.css
+++ b/style.css
@@ -23,11 +23,19 @@ nav {
     font-family: 'Rowdies', cursive;
 }
 
+.logo {
+    background-image: linear-gradient(to top left,rgb(255, 152, 246),rgb(10, 142, 165));
+    padding: 10px 12px;
+    border-radius: 100%;
+    color: white;
+}
+
 .logo-a {
     font-family: 'Tillana', cursive;
     text-decoration: none;
-    font-size: 2.8em;
+    font-size: 2.1em;
     font-weight: bold;
+    margin-top: 20px;
 }
 
 ul {
